--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#1e1e2f" />
+    <meta name="description" content="Nevil Sanatan Barick | Portfolio Website" />
     <title>RESQ.AI</title>
   </head>
-  <body>
+  <body class="bg-gray-950 text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
